# pinpoint

./: .env.example  .gitignore  AUDIT_ISSUES.txt  AUDIT_V2.txt  AUDIT_V3.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PINPOINT_IDEA.txt  README.md  api.py  audio_search.py  database.py  environment.yml  evaluate_search.py  extractors.py  face_search.py  image_search.py  indexer.py  indexing_service.py  job_service.py  load_test_search.py  photo_cull.py  pyproject.toml  run_api.py  search.py  search_pipeline.py  start.sh  video_search.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bot-package-validate.yml  lint.yml  package-validate.yml  security.yml  test.yml
api/: __init__.py  core.py  data.py  faces.py  files.py  google.py  helpers.py  media.py  memory.py  photos.py  search.py  transform.py
benchmarks/: README.md  V3_LEGAL_WORKFLOW.txt  expanded_report.json  latest_report.json  search_relevance.json  search_relevance_expanded.json  search_relevance_semantic.json  search_relevance_v2.json  search_relevance_v4_mixed.json  semantic_report.json  v2_report.json  v2_report_with_embeddings.json  v4_mixed_lexical_compare.json  v4_mixed_lexical_compare_fixed.json  v4_mixed_report.json
benchmarks/corpus/: customer_success_playbook.txt  employee_handbook.md  incident_postmortem.txt  support_runbook.md  vendor_contracts.csv
benchmarks/corpus_semantic/: benefits_summary.txt  expense_guidelines.txt  security_response.txt  travel_policy.txt
benchmarks/corpus_v2/: accounts_receivable_report.txt  billing_faq.txt  collections_playbook.txt  expense_claim_guide.txt  incident_escalation_runbook.txt  new_hire_checklist.txt  onboarding_guide.txt  outstanding_invoices.txt  qbr_template.txt  queue_backlog_postmortem.txt  remote_work_policy.txt  renewal_health_dashboard.txt  security_response_guide.txt  travel_reimbursement_policy.txt
benchmarks/corpus_v4_mixed/: client_database.csv  customer_success_playbook.txt  employee_handbook.md  incident_postmortem.txt  meeting_minutes_q1_review.txt  quarterly_product_review.txt  support_runbook.md
benchmarks/scripts/: build_legal_benchmark_v3.py
benchmarks/v3_legal/: bm25l_analysis.txt  bm25l_report.json  expanded_queries.json  lexical_timing_report.json  starter_queries.json  starter_report.json  starter_timing_report.json  starter_timing_report_current.json  starter_timing_report_docfirst.json  starter_timing_report_gated.json  subset_files.txt  subset_summary.json  summary.json  v3_after_fix.json  v3_expanded_report.json
benchmarks/v3_legal/subset_corpus/: 176290.txt  176294.txt  176295.txt  176318.txt  176319.txt  176519.txt  176520.txt  176521.txt  176522.txt  176523.txt  176524.txt  176525.txt  176526.txt  176527.txt  176528.txt  176529.txt  176530.txt  176531.txt  176532.txt  176533.txt  176534.txt  176535.txt  176536.txt  176560.txt  176561.txt  176562.txt  176563.txt  176564.txt  176565.txt  176566.txt  176567.txt  176568.txt  176569.txt  176575.txt  176576.txt  176577.txt  176578.txt  176579.txt  176586.txt  176587.txt  (+460 more)
bot/: .prettierrc  eslint.config.js  index.js  package-lock.json  package.json
bot/src/: llm.js  photo-task-followup.js  skills.js  tools.js
bot/test/: photo-task-followup.test.js  search-summary.test.js  skills-paths.test.js
docs/: architecture.md  benchmark-summary.md  release-checklist.md  stability-policy.md  troubleshooting.md
pinpoint/: __init__.py  _alias.py  cli.py  cli_chat.py  database.py  indexer.py  indexing_service.py  job_service.py  search.py  search_pipeline.py
pinpoint/api/: __init__.py
skills/: __init__.py  archive-tools.md  audio-search.md  batch-awareness.md  common-mistakes.md  core-rules.md  data-analysis.md  download.md  face-analysis.md  file-tools.md  google-workspace.md  image-analysis.md  image-tools.md  memory.md  pdf-tools.md  photo-cull.md  photo-group.md  python.md  search.md  smart-ops.md  video-search.md  visual-search.md  web-search.md  write-create.md
tests/: conftest.py  test_audit_validation.py  test_cli_chat.py  test_core.py  test_data.py  test_database.py  test_evaluate_search.py  test_extractors.py  test_faces.py  test_files.py  test_indexing_service.py  test_load_test_search.py  test_media.py  test_memory.py  test_ml_pipelines.py  test_packaging.py  test_photos.py  test_resource_cleanup.py  test_search.py  test_transform.py
