[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinpoint"
version = "1.0.0"
description = "Local document/photo search with WhatsApp bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "python-multipart",
    "requests",
    "httpx",
    "pydantic",
    "numpy",
    "pandas",
    "matplotlib",
    "pillow",
    "pillow-heif",
    "google-genai",
    "openpyxl",
    "pymupdf",
    "pymupdf4llm",
    "pdfplumber",
    "markitdown",
    "python-docx",
    "python-pptx",
    "readability-lxml",
    "html2text",
    "chonkie",
    "pyyaml",
    "watchdog",
]

[project.scripts]
pinpoint = "pinpoint.cli:main"

[tool.setuptools]
py-modules = [
    "audio_search",
    "database",
    "evaluate_search",
    "extractors",
    "face_search",
    "image_search",
    "indexer",
    "indexing_service",
    "job_service",
    "load_test_search",
    "photo_cull",
    "run_api",
    "search",
    "search_pipeline",
    "video_search",
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "pinpoint*", "skills*"]

[tool.setuptools.package-data]
skills = ["*.md"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["nanobot-main", ".pkg-venv", ".pkg-build-tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E402",   # import not at top — intentional (load_dotenv before imports)
    "E501",   # line too long — handled by formatter, but allow long strings/URLs
    "E701",   # multiple statements on one line — compact one-liners are fine
    "E741",   # ambiguous variable name (l, O, I) — common in math/loops
    "F841",   # local variable assigned but never used — sometimes intentional
    "B007",   # loop variable not used — common pattern
    "B008",   # function call in default argument — FastAPI uses this (Query, Body)
    "B904",   # raise from err — FastAPI HTTPException re-raises don't need chaining
    "UP007",  # use X | Y for union — not all deps support it yet
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F401", "E402"]
"image_search.py" = ["F401"]  # onnxruntime imported for availability check

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests that load heavy ML models or hit external APIs",
]
