[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinpoint-search"
version = "1.0.4"
description = "Local document/photo search with WhatsApp bot"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Pinpoint contributors"},
]
keywords = ["whatsapp", "search", "local-first", "sqlite", "fastapi", "documents", "photos"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.6",
    "requests>=2.28",
    "httpx>=0.24",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "pillow-heif>=0.13",
    "google-genai>=1.0",
    "openpyxl>=3.1",
    "pymupdf>=1.23",
    "pymupdf4llm>=0.0.10",
    "pdfplumber>=0.9",
    "markitdown>=0.1",
    "python-docx>=1.0",
    "python-pptx>=0.6.21",
    "readability-lxml>=0.8",
    "html2text>=2020.1",
    "chonkie>=0.1",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

# Tested with: fastapi 0.131, uvicorn 0.41, google-genai 1.64, numpy 2.3,
# pandas 3.0, pillow 10.4, pymupdf 1.27, insightface 0.7.3, onnxruntime 1.24

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
faces = ["insightface>=0.7.3", "onnxruntime>=1.16"]
faces-gpu = ["insightface>=0.7.3", "onnxruntime-gpu>=1.16"]
all = ["pytesseract>=0.3.10", "insightface>=0.7.3", "onnxruntime>=1.16"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/vijishmadhavan/pinpoint"
Repository = "https://github.com/vijishmadhavan/pinpoint"
Issues = "https://github.com/vijishmadhavan/pinpoint/issues"

[project.scripts]
pinpoint = "pinpoint.cli:main"

[tool.setuptools]
py-modules = [
    "audio_search",
    "database",
    "evaluate_search",
    "extractors",
    "face_search",
    "image_search",
    "indexer",
    "indexing_service",
    "job_service",
    "load_test_search",
    "photo_cull",
    "run_api",
    "search",
    "search_pipeline",
    "video_search",
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "pinpoint*", "skills*"]

[tool.setuptools.package-data]
skills = ["*.md"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["nanobot-main", ".pkg-venv", ".pkg-build-tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E402",   # import not at top — intentional (load_dotenv before imports)
    "E501",   # line too long — handled by formatter, but allow long strings/URLs
    "E701",   # multiple statements on one line — compact one-liners are fine
    "E741",   # ambiguous variable name (l, O, I) — common in math/loops
    "F841",   # local variable assigned but never used — sometimes intentional
    "B007",   # loop variable not used — common pattern
    "B008",   # function call in default argument — FastAPI uses this (Query, Body)
    "B904",   # raise from err — FastAPI HTTPException re-raises don't need chaining
    "UP007",  # use X | Y for union — not all deps support it yet
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F401", "E402"]
"image_search.py" = ["F401"]  # onnxruntime imported for availability check

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests that load heavy ML models or hit external APIs",
]
